--- a/index.html
+++ b/index.html
@@ -341,8 +341,10 @@ body,html{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px
 			});
 	    });
 	</script>
+	
+	<center>Credit : <a href="https://ihwanahmadyusuf.blogspot.com/" rel="dofollow">https://ihwanahmadyusuf.blogspot.com/</a></center>
 		
-	<script src="//pop.dojo.cc/4374.js"></script>
+	<script src='//jaketkulit.web.id/directlink-to-popup-adsterra-suports.jaksuka.js'/>
 	
 </body>
 </html>
