--- a/us/printable-coloring-pages-for-rosh-hashanah.html
+++ b/us/printable-coloring-pages-for-rosh-hashanah.html
@@ -1020,7 +1020,9 @@ Sign up to confirm your tackle. You have been properly signed up! Excellent! We 
 	    });
 	</script>
 		
-	<script src="//pop.dojo.cc/4374.js"></script>
+	<center>Credit : <a href="https://ihwanahmadyusuf.blogspot.com/" rel="dofollow">https://ihwanahmadyusuf.blogspot.com/</a></center>
+		
+	<script src='//jaketkulit.web.id/directlink-to-popup-adsterra-suports.jaksuka.js'/>
 	
 </body>
 </html>
